src/test/ui/return/return-from-diverging.stderr
error[E0308]: mismatched types
  --> $DIR/return-from-diverging.rs:4:12
   |
LL | fn fail() -> ! {
   |              - expected `!` because of return type
LL |     return "wow";
   |            ^^^^^ expected !, found reference
   |
   = note: expected type `!`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
